<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    tools:context=".Main.WelcomeActivity">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_100sdp"
        android:text="@string/app_for_fan_chelsea"
        android:textColor="@color/white"
        android:textSize="@dimen/_25ssp" />

</RelativeLayout>