<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Main.SignUpActivity">

        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/logo_remove_bg" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_190sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_57sdp"
                android:background="@drawable/ic_username" />

            <EditText
                android:id="@+id/edtNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/nickname"
                android:inputType="text"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingBottom="@dimen/_13sdp" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_107sdp"
                android:background="@drawable/ic_password" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingBottom="@dimen/_13sdp" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_157sdp"
                android:background="@drawable/ic_re_password" />

            <EditText
                android:id="@+id/edtRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_150sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/re_password"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingBottom="@dimen/_13sdp" />

            <ImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_207sdp"
                android:background="@drawable/ic_email" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_200sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/_16sdp"
                android:paddingBottom="@dimen/_13sdp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_270sdp"
                android:layout_marginRight="@dimen/_20sdp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/sign_up"
                    app:cornerRadius="@dimen/_8sdp" />

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:visibility="invisible" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_20sdp">

                <TextView
                    android:id="@+id/txtLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_330sdp"
                    android:text="@string/have_account_login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold" />

            </FrameLayout>

        </RelativeLayout>

    </RelativeLayout>

</ScrollView>
