<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login">


    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_150sdp"
        android:background="@drawable/design_edittext"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/color_text" />

    <EditText
        android:id="@+id/edtRePassword"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/edtNewPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:background="@drawable/design_edittext"
        android:hint="@string/re_password"
        android:inputType="textPassword"
        android:paddingStart="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:textColor="@color/color_text" />

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtRePassword"
        android:layout_marginTop="@dimen/_40sdp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnUpdatePassword"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:backgroundTint="#000000"
            android:text="Cập Nhật Mật Khẩu"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:cornerRadius="@dimen/_8sdp" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:visibility="invisible" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frame_layout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frame_layout"
        android:layout_marginTop="@dimen/_30sdp">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_alert" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_60sdp"
            android:text="@string/alert"
            android:textColor="#FF0000"
            android:textSize="@dimen/_15ssp"
            android:textStyle="bold" />

    </FrameLayout>

</RelativeLayout>